[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://UI/K-091.jpg" type="Texture" id=2]
[ext_resource path="res://UI/K-085.jpg" type="Texture" id=3]
[ext_resource path="res://UI/K-092.jpg" type="Texture" id=4]
[ext_resource path="res://UI/K-023.jpg" type="Texture" id=5]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="AtlasTexture" id=2]

[node name="Scene1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -71.0
margin_right = -61.0
margin_bottom = -71.0
rect_scale = Vector2( 1.37867, 1.4796 )
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_left = 129.533
margin_top = 90.6256
margin_right = 129.533
margin_bottom = 155.625
rect_scale = Vector2( 0.341871, 0.495904 )
custom_colors/font_color = Color( 0.231373, 0.121569, 0.87451, 1 )
text = "Main Scene"
align = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 111.608
margin_top = -79.3479
margin_right = 276.608
margin_bottom = 74.6521
rect_scale = Vector2( 0.151046, 0.155251 )
icon = SubResource( 1 )

[node name="Option" type="Sprite" parent="Button"]
position = Vector2( 81.7487, 66.2974 )
scale = Vector2( 1.20407, 1.03487 )
texture = ExtResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 306.852
margin_top = 210.653
margin_right = 771.852
margin_bottom = 364.653
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_color_disabled = Color( 0.447059, 0.211765, 0.211765, 1 )
icon = SubResource( 2 )

[node name="Play" type="Sprite" parent="Button2"]
position = Vector2( 226.412, 67.903 )
scale = Vector2( 2.19164, 2.05355 )
texture = ExtResource( 3 )

[node name="Button3" type="Button" parent="."]
margin_left = 42.5678
margin_top = 115.478
margin_right = 101.568
margin_bottom = 179.478
rect_scale = Vector2( 0.4, 0.4 )

[node name="Shop" type="Sprite" parent="Button3"]
position = Vector2( 31.2318, 29.4447 )
scale = Vector2( 0.381147, 0.43674 )
texture = ExtResource( 4 )

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 208.632, 139.469 )
scale = Vector2( 0.250467, 0.235377 )
z_index = -2
texture = ExtResource( 5 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
